--- a/sass/info.scss
+++ b/sass/info.scss
@@ -53,18 +53,6 @@ p {
 }
 
 
-
-.up {
-  width: 48px;
-  height: 48px;
-  background: url('../image/up-icon.svg') 0 0 no-repeat;
-  background-size: 100% 100%;
-  position: fixed;
-  right: 80px;
-  bottom: 80px;
-  cursor: pointer;
-  display: none;
-}
 .button {
   @extend %flex-center;
   color: white;
@@ -73,9 +61,15 @@ p {
   width: 160px;
   height: 40px;
   background: linear-gradient(94.54deg, #FF8212 0%, #ED4454 100%);
+  border: 1px solid transparent;
   border-radius: 3px;
   cursor: pointer;
 }
+.button:hover {
+  background: linear-gradient(94.54deg, #FF994F 0%, #E23B8C 100%)
+}
+
+
 
 .content {
   max-width: 1280px;
@@ -135,9 +129,9 @@ p {
     text-align: center;
     h1 {
       font-weight: bold;
-      font-size: 64px;
-      line-height: 64px;
-      margin-bottom: 30px;
+      font-size: 100px;
+      line-height: 100px;
+      margin-bottom: 60px;
       background: url('../image/icon.svg') 100% 0 no-repeat;
     }
     h2 {
@@ -189,8 +183,14 @@ p {
       width: 426px;
       height: 346px;
       padding: 160px 48px 70px 48px;
-      background-position: 56px 56px;
-      background-repeat: no-repeat;
+      background: url() center 56px no-repeat;
+      text-align: center;
+    }
+    dl:hover {
+      border-radius: 10px;
+      background-color: white;
+      box-shadow: 0px 0px 30px rgba(65, 30, 34, 0.05);
+      cursor: pointer;
     }
     dt {
       font-weight: bold;
@@ -304,7 +304,6 @@ p {
   .content {
     padding-top: 100px;
     padding-bottom: 130px;
-    padding-left: 80px;
     position: relative;
     .back {
       position: absolute;
@@ -391,16 +390,16 @@ p {
       cursor: pointer;
       margin-left: 20px;
     }
-    li:first-child {
+    li.left-control {
       background-image: url('../image/arr-left.svg');
     }
-    li:last-child {
+    li.right-control {
       background-image: url('../image/arr-right.svg');
     }
-    li:first-child:hover {
+    li.left-control.enable {
       background-image: url('../image/arr-left-hover.svg');
     }
-    li:last-child:hover {
+    li.right-control.enable {
       background-image: url('../image/arr-right-hover.svg');
     }
   }
@@ -880,6 +879,8 @@ p {
       h1 {
         font-size: 36px;
         padding-top: 40px;
+        line-height: 1;
+        margin-bottom: 20px;
       }
       h2 {
         font-size: 20px;
