--- a/style/common.css
+++ b/style/common.css
@@ -104,7 +104,7 @@ h1, h2 {
   background-size: 100% 100%;
   position: fixed;
   right: 80px;
-  bottom: 80px;
+  bottom: 150px;
   cursor: pointer;
   display: none;
   z-index: 10;
@@ -173,6 +173,10 @@ h1, h2 {
 }
 
 @media only screen and (max-width: 480px) {
+  .head {
+    height: 64px !important;
+  }
+
   .head .logo {
     width: 88px;
     height: 28px;
@@ -217,7 +221,7 @@ h1, h2 {
 @keyframes an-1 {
   0% {
     opacity: 0;
-    transform: translate(0, 200%);
+    transform: translate(0, 130%);
   }
   100% {
     opacity: 1;
@@ -227,11 +231,11 @@ h1, h2 {
 @keyframes an-2 {
   0% {
     opacity: 0;
-    transform: translate(0, 200%);
+    transform: translate(0, 120%);
   }
   50% {
     opacity: 0;
-    transform: translate(0, 200%);
+    transform: translate(0, 120%);
   }
   100% {
     opacity: 1;
@@ -241,11 +245,11 @@ h1, h2 {
 @keyframes an-3 {
   0% {
     opacity: 0;
-    transform: translate(0, 200%);
+    transform: translate(0, 100%);
   }
   70% {
     opacity: 0;
-    transform: translate(0, 200%);
+    transform: translate(0, 100%);
   }
   100% {
     opacity: 1;
@@ -255,11 +259,11 @@ h1, h2 {
 @keyframes an-4 {
   0% {
     opacity: 0;
-    transform: translate(0, 200%);
+    transform: translate(0, 90%);
   }
   80% {
     opacity: 0;
-    transform: translate(0, 200%);
+    transform: translate(0, 90%);
   }
   100% {
     opacity: 1;
@@ -272,7 +276,7 @@ h1, h2 {
 }
 
 .section-main h1 {
-  animation: an-1 0.4s linear;
+  animation: an-1 0.7s linear;
 }
 
 .section-main h2 {
@@ -280,17 +284,17 @@ h1, h2 {
 }
 
 .section-main p {
-  animation: an-3 0.8s linear;
+  animation: an-3 0.9s linear;
 }
 
 .section-main .button {
-  animation: an-4 0.9s linear;
+  animation: an-4 1.1s linear;
 }
 
 @keyframes an {
   0% {
     opacity: 0;
-    transform: translate(0, 200%);
+    transform: translate(0, 80%);
   }
   100% {
     opacity: 1;
@@ -298,19 +302,57 @@ h1, h2 {
   }
 }
 .clv h2, .clv h3 {
-  animation: an 0.4s linear;
+  animation: an 0.5s linear;
 }
 
+@keyframes bn-1 {
+  0% {
+    opacity: 0;
+    transform: translate(0, 80%);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+@keyframes bn-2 {
+  0% {
+    opacity: 0;
+    transform: translate(0, 40%);
+  }
+  50% {
+    opacity: 0;
+    transform: translate(0, 40%);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+@keyframes bn-3 {
+  0% {
+    opacity: 0;
+    transform: translate(0, 90%);
+  }
+  70% {
+    opacity: 0;
+    transform: translate(0, 90%);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
 .about-main h2 {
-  animation: an-1 0.5s linear;
+  animation: bn-1 0.5s linear;
 }
 
 .about-main p {
-  animation: an-2 1s linear;
+  animation: bn-2 0.6s linear;
 }
 
 .about-main .button {
-  animation: an-3 1.4s linear;
+  animation: bn-3 0.7s linear;
 }
 
 .section-reason h2.animation {
