--- a/sass/common.scss
+++ b/sass/common.scss
@@ -139,12 +139,15 @@ body {
     height: auto !important;
     background: url('../image/logo-text-white.svg') 0 0 no-repeat;
     a {
+      padding-right: 20px;
       border-right: 1px solid rgba(255, 255, 255, 0.5);
       margin-right: 17px;;
       line-height: 14px;
     }
     a:last-child {
       border-right: none;
+      padding-right: 0;
+      margin-right: 0;
     }
     .row:first-child {
       margin-bottom: 16px;
