--- a/style/common.css
+++ b/style/common.css
@@ -142,12 +142,15 @@ body {
   background: url("../image/logo-text-white.svg") 0 0 no-repeat;
 }
 .footer .left a {
+  padding-right: 20px;
   border-right: 1px solid rgba(255, 255, 255, 0.5);
   margin-right: 17px;
   line-height: 14px;
 }
 .footer .left a:last-child {
   border-right: none;
+  padding-right: 0;
+  margin-right: 0;
 }
 .footer .left .row:first-child {
   margin-bottom: 16px;
