Add Email & Change Text

--- a/sass/common.scss
+++ b/sass/common.scss
@@ -25,6 +25,37 @@ body {
   height: 40px;
   background: url('../image/logo-text.svg') center center no-repeat;
 }
+
+.head {
+  width: 100%;
+  margin: 0 auto;
+  height: 80px;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  .content {
+    width: 1280px;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+.content {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+.head.dark {
+  color: white;
+  .logo {
+    background-image: url('../image/logo-text-white.svg');
+  }
+}
+
 .head.fixed-back {
   .logo {
     background-image: url('../image/logo-text.svg') !important;
@@ -144,6 +175,16 @@ body {
       margin-right: 17px;;
       line-height: 14px;
     }
+    a.mail {
+      display: flex;
+      align-items: flex-start;
+      justify-content: flex-start;
+      margin-right: 10px;
+      img {
+        margin-right: 10px;
+        display: inline;
+      }
+    }
     a:last-child {
       border-right: none;
       padding-right: 0;
@@ -156,6 +197,7 @@ body {
       font-size: 12px;
       line-height: 15px;
       text-align: left;
+      display: flex;
       a:first-child {
         color: #1B96F1
       }
@@ -180,7 +222,11 @@ body {
   justify-content: space-around;
   margin-top: 100px;
 }
-
+@media only screen and (max-width: 1280px) {
+  .content {
+    padding: 0 20px;
+  }
+}
 @media only screen and (max-width: 480px) {
   .head {
     height: 64px !important;
@@ -195,6 +241,11 @@ body {
   }
   .nav {
     display: none !important;
+  }
+  .up {
+    width: 40px;
+    height: 40px;
+    right: 20px;
   }
   .footer {
     padding: 0 !important;
@@ -213,17 +264,23 @@ body {
     .row {
       width: 100% !important;
     }
-    a {
-      display: block !important;
-      text-align: center !important;
-      margin-top: 40px !important;
+    .row:last-child {
+      flex-direction: column;
+      padding-top: 40px;
+      a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0 0 10px 0;
+        margin: 0;
+        border: none;
+      }
     }
     .social {
       display: none;
     }
   }
 }
-
 
 @keyframes an-1 {
   0% {
