--- a/sass/info.scss
+++ b/sass/info.scss
@@ -90,29 +90,6 @@ p {
   background-color: #172026;
 }
 
-.head {
-  width: 100%;
-  margin: 0 auto;
-  height: 80px;
-  background-color: transparent;
-  @extend %flex;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  .content {
-    width: 1280px;
-    display: flex;
-    justify-content: space-between;
-  }
-}
-.head.dark {
-  color: white;
-  .logo {
-    background-image: url('../image/logo-text-white.svg');
-  }
-}
-
 .column {
   @extend %flex-center; 
 }
@@ -126,7 +103,7 @@ p {
     width: 100%;
     height: 100%;
     max-width: 900px;
-    text-align: center;
+    text-align: left;
     h1 {
       font-weight: bold;
       font-size: 100px;
@@ -138,17 +115,17 @@ p {
       font-size: 40px;
       line-height: 29px;
       margin-bottom: 25px;
+      margin-bottom: 40px;
     }
     p {
       margin: 0 auto 60px auto;
-      max-width: 720px;
     }
     .button {
       display: flex;
       align-items: center;
       justify-content: flex-start ;
       padding-left: 28px;
-      margin: 0 auto;
+      margin: 0 0 0 140px;
       img {
         margin-right: 12px;
       }
@@ -177,7 +154,7 @@ p {
   }
   .list {
     @extend %flex-center;
-    justify-content: flex-start;
+    justify-content: center;
     flex-wrap: wrap;
     dl {
       width: 426px;
@@ -833,9 +810,6 @@ p {
   .content {
     padding: 70px 20px;
   }
-  .head .logo {
-    margin-left: 20px;
-  }
   .section-main {
     padding-top: 0;
     .left {
@@ -845,19 +819,6 @@ p {
 }
 
 @media only screen and (max-width: 480px) {
-  .up {
-    width: 40px;
-    height: 40px;
-    right: 20px;
-  }
-  .head {
-    width: 100%;
-    height: 64px;
-    box-shadow: none;
-    .content {
-      padding: 0;
-    }
-  }
   .column {
     flex-direction: column;
     .left, .right {
@@ -881,6 +842,7 @@ p {
         padding-top: 40px;
         line-height: 1;
         margin-bottom: 20px;
+        text-align: center;
       }
       h2 {
         font-size: 20px;
