--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,6 +36,12 @@ a {
   height: 46px;
 }
 
+.footer .row:last-child {
+  a:first-child {
+    padding-right: 20px;
+  }
+}
+
 
 .container {
   width: 100%;
