--- a/sass/common.scss
+++ b/sass/common.scss
@@ -224,6 +224,9 @@ body {
   margin-top: 100px;
 }
 @media only screen and (max-width: 1280px) {
+  .head .content {
+    padding: 0 20px !important;
+  }
   .footer .content {
     padding: 0 20px !important;
   }
