--- a/style/common.css
+++ b/style/common.css
@@ -226,6 +226,10 @@ body {
 }
 
 @media only screen and (max-width: 1280px) {
+  .head .content {
+    padding: 0 20px !important;
+  }
+
   .footer .content {
     padding: 0 20px !important;
   }
